.helm/templates/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: gate.libupd8.com
      http:
        paths:
          - backend:
              service:
                name: backend-website
                port:
                  number: 8080
            path: /
            pathType: Prefix
